--- a/404.html
+++ b/404.html
@@ -30,15 +30,15 @@
   <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://tsaichialin.com/assets/fonts/social/css/fontello.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://tsaichialin.com/assets/css/vendors/splitting.css" type="text/css" media="all" />
-  <!-- <link rel="stylesheet" href="https://tsaichialin.com/assets/css/vendors/swiper.css" type="text/css" media="all" /> -->
+  <!-- <link rel="stylesheet" href="assets/css/vendors/swiper.css" type="text/css" media="all" /> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://tsaichialin.com/assets/css/main.css" type="text/css" media="all" />
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="assets/images/icon.png">
+  <link rel="icon" href="https://tsaichialin.com/assets/images/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="https://tsaichialin.com/assets/images/icon.png">
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -63,7 +63,7 @@
     <div class="centrize full-width">
       <div class="vertical-center">
         <div class="spinner-logo">
-          <img src="assets/images/lynn-w.svg" alt="home" />
+          <img src="https://tsaichialin.com/assets/images/lynn-w.svg" alt="home" />
           <div class="spinner-dot"></div>
           <div class="spinner spinner-line"></div>
         </div>
@@ -77,42 +77,10 @@
 
 			<!-- logo -->
 			<div class="logo-image">
-					 <a href="index.html"><img src="assets/images/lynn-w.svg" alt="logo" /></a>
+					 <a href="https://tsaichialin.com"><img src="https://tsaichialin.com/assets/images/lynn-w.svg" alt="logo" /></a>
 				  </div>
 	  
-				  <!-- menu btn -->
-			<a href="#" class="menu-btn full"><span></span></a>
-	  
-			<!-- Menu Full Overlay -->
-			<div class="menu-full-overlay">
-				  <div class="menu-full-container">
-				  <div class="container">
-					  <div class="row">
-						  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 offset-1">
-							  <!-- menu full -->
-							  <div class="menu-full">
-								  <ul class="menu-full">
-										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="index.html">Welcome</a></li>
-										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="about.html">Who is this</a></li>
-										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="works.html">Works collection</a></li>
-								  </ul>
-							  </div>
-						  </div>
-					  </div>
-				  </div>
-				  </div>
-	  
-				  <!-- social -->
-				  <div class="menu-social-links">
-					  <a target="_blank" rel="noreferrer" href="https://www.instagram.com/nice.and.quiet/" class="scrolla-element-anim-1 scroll-animate" data-animate="active">
-						  <i aria-hidden="true" class="icon-instagram"></i>
-					  </a>
 
-					  <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/tsaichialin/" class="scrolla-element-anim-1 scroll-animate" data-animate="active">
-						  <i aria-hidden="true" class="icon-linkedin"></i>
-					  </a>
-				  </div>
-			</div>
 	  
 		</div>
 	</header>
@@ -126,7 +94,7 @@
 						<h2 class="about">Uh-oh! <br>Page Not Found<br><span class="small">頁面不見了</span></h2>                                             
 					</div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<a class="email scrolla-element-anim-1 scroll-animate" data-animate="active" rel="noreferrer" href="/index.html">GO BACK HOME &ensp;回首頁</a>
+						<a class="email scrolla-element-anim-1 scroll-animate" data-animate="active" rel="noreferrer" href="https://tsaichialin.com">GO BACK HOME &ensp;回首頁</a>
 					</div>
 				</div>
 			</div>
@@ -143,12 +111,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.jss"></script>
 <!-- <script src="assets/js/swiper.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.js"></script>
-<script src="assets/js/splitting.min.js"></script>
-<script src="assets/js/jarallax.min.js"></script>
-<script src="assets/js/imagesloaded.pkgd.js"></script>
-<script src="assets/js/isotope.pkgd.js"></script>
-<script src="assets/js/jquery.scrolla.js"></script>
-<script src="assets/js/skrollr.js"></script>
-<script src="assets/js/common.js"></script>
+<script src="https://tsaichialin.com/assets/js/splitting.min.js"></script>
+<script src="https://tsaichialin.com/assets/js/jarallax.min.js"></script>
+<script src="https://tsaichialin.com/assets/js/imagesloaded.pkgd.js"></script>
+<script src="https://tsaichialin.com/assets/js/isotope.pkgd.js"></script>
+<script src="https://tsaichialin.com/assets/js/jquery.scrolla.js"></script>
+<script src="https://tsaichialin.com/assets/js/skrollr.js"></script>
+<script src="https://tsaichialin.com/assets/js/common.js"></script>
 </body>
 </html>
