--- a/404.html
+++ b/404.html
@@ -95,7 +95,7 @@
 </div>
 
 <script src="assets/js/jquery.min.js"></script>
-<!-- <script src="assets/js/bootstrap.js"></script> -->
+<!-- <script src="https://tsaichialin.com/assets/js/bootstrap.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.jss"></script>
 <!-- <script src="assets/js/swiper.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.js"></script>
