--- a/works.html
+++ b/works.html
@@ -7,11 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Tsaichialin">
-	<meta name="description" content="Hi there,it's Lynn. A designer + animator.">
+	<meta name="description" content="Hi there, it's Lynn, a designer & animator. 謝謝你在茫茫大海中找到這裡。">
 	<!-- Facebook Meta -->
 	<meta property="og:url" content="https://tsaichialin.com">
 	<meta property="og:title" content="Lynn's Portfolio">
-	<meta property="og:description" content="Hi there,it's Lynn. A designer + animator.">
+	<meta property="og:description" content="Hi there, it's Lynn, a designer & animator. 謝謝你在茫茫大海中找到這裡。">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://tsaichialin.com/assets/images/fb.jpg">
 	<meta property="og:image:secure_url" content="https://tsaichialin.com/assets/images/fb.jpg">
@@ -137,15 +137,6 @@
 		<!-- Section Works -->
 		<div class="section section-inner m-works">
 			<div class="container">
-
-				<!-- filter -->
-				<!-- <div class="filter-links">
-					<a href="#" class="scrolla-element-anim-1 scroll-animate" data-animate="active" data-href=".works-col">All</a>
-					<a href="#" class="scrolla-element-anim-1 scroll-animate" data-animate="active" data-href=".sorting-video">Video</a>
-					<a href="#" class="scrolla-element-anim-1 scroll-animate" data-animate="active" data-href=".sorting-illustration">Illustration</a>
-					<a href="#" class="scrolla-element-anim-1 scroll-animate" data-animate="active" data-href=".sorting-design">Design</a>
-					<a href="#" class="scrolla-element-anim-1 scroll-animate" data-animate="active" data-href=".sorting-photo">Photo</a>
-				</div> -->
 
 				<!-- works items -->
 				<div class="works-items row column-2-offset portfolio-infinite-scrolling">
@@ -1425,6 +1416,22 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
+										<img src="assets/images/illustration064.jpg" loading="lazy" alt="Almost Tomorrow" />
+									</span>
+								</span>
+								<span class="desc">
+									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration</span>
+									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Almost Tomorrow<span class="small">  幾乎明日</span></span>
+								</span>
+							</a>
+						</div>
+					</div>
+
+					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-illustration ">
+						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
+							<a href="javascript:void(0)">
+								<span class="image">
+									<span class="img">
 										<img src="assets/images/illustration017.jpg" loading="lazy" alt="Almost Tomorrow" />
 									</span>
 								</span>
@@ -1606,12 +1613,12 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/illustration032.jpg" loading="lazy" alt="Tiger" />
+										<img src="assets/images/illustration032.jpg" loading="lazy" alt="So What" />
 									</span>
 								</span>
 								<span class="desc">
 									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Tiger<span class="small">  虎爺</span></span>
+									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">So What<span class="small">  那又如何</span></span>
 								</span>
 							</a>
 						</div>
@@ -1770,12 +1777,12 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/illustration042.jpg" loading="lazy" alt="Write you a letter" />
+										<img src="assets/images/illustration042.jpg" loading="lazy" alt="Write You a Letter" />
 									</span>
 								</span>
 								<span class="desc">
 									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Write you a letter<span class="small">  在世界末日寫信給你</span></span>
+									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Write You a Letter<span class="small">  在世界末日寫信給你</span></span>
 								</span>
 							</a>
 						</div>
@@ -1868,12 +1875,12 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/illustration034.jpg" loading="lazy" alt="Kill or Not kill" />
+										<img src="assets/images/illustration034.jpg" loading="lazy" alt="Gaze" />
 									</span>
 								</span>
 								<span class="desc">
 									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Kill or Not kill</span>
+									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Gaze<span class="small">  凝視</span></span>
 								</span>
 							</a>
 						</div>
@@ -2166,10 +2173,16 @@
 
 	</div>
 	<!-- Back to top button -->
-	<button type="button"  id="btn-back-to-top">
+	<!-- <button type="button"  id="btn-back-to-top">
 		<?xml version="1.0" encoding="UTF-8"?>
 		<svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.33 24"><defs><style>.cls-1{fill:#595959;}</style></defs><path class="cls-1" d="M5.33,10.67h4v13.33h2.67V10.67h4l-5.33-5.33-5.33,5.33ZM0,0V2.67H21.33V0H0Z"/></svg>
-	</button>
+	</button> -->
+	
+		<!-- Back to top button -->
+		<button type="button"  id="btn-back-to-top">
+			<?xml version="1.0" encoding="UTF-8"?>
+			<svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.33 24"><defs><style>.cls-1{fill:#595959;}</style></defs><path class="st0" d="M5.3,10.7h4.2V24h2.3V10.7H16l-5.3-5.3L5.3,10.7L5.3,10.7z M0,0v2.3h21.3V0H0z"/></svg>
+		</button>
 
   <!-- Footer -->
   	<footer class="footer">
