--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="author" content="Tsaichialin">
-  <meta name="description" content="Hi there,it's Lynn. A designer + animator.">
+  <meta name="description" content="Hi there, it's Lynn, a designer & animator. 謝謝你在茫茫大海中找到這裡。">
   <!-- Facebook Meta -->
   <meta property="og:url" content="https://tsaichialin.com">
   <meta property="og:title" content="Lynn's Portfolio">
-  <meta property="og:description" content="Hi there,it's Lynn. A designer + animator.">
+  <meta property="og:description" content="Hi there, it's Lynn, a designer & animator. 謝謝你在茫茫大海中找到這裡。">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://tsaichialin.com/assets/images/fb.jpg">
   <meta property="og:image:secure_url" content="https://tsaichialin.com/assets/images/fb.jpg">
