9ed fix mobile hover issue

--- a/works.html
+++ b/works.html
@@ -2181,7 +2181,7 @@
 		<!-- Back to top button -->
 		<button type="button"  id="btn-back-to-top">
 			<?xml version="1.0" encoding="UTF-8"?>
-			<svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.33 24"><defs><style>.cls-1{fill:#595959;}</style></defs><path class="st0" d="M5.3,10.7h4.2V24h2.3V10.7H16l-5.3-5.3L5.3,10.7L5.3,10.7z M0,0v2.3h21.3V0H0z"/></svg>
+			<svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.33 24"><defs></defs><path class="st0" d="M5.3,10.7h4.2V24h2.3V10.7H16l-5.3-5.3L5.3,10.7L5.3,10.7z M0,0v2.3h21.3V0H0z"/></svg>
 		</button>
 
   <!-- Footer -->
