--- a/works.html
+++ b/works.html
@@ -213,7 +213,7 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/illustration028.jpg" loading="lazy alt="Open Book" />
+										<img src="assets/images/illustration028.jpg" loading="lazy" alt="Open Book" />
 									</span>
 								</span>
 								<span class="desc">
@@ -229,7 +229,7 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/illustration029.jpg" loading="lazy alt="Open Book" />
+										<img src="assets/images/illustration029.jpg" loading="lazy" alt="Open Book" />
 									</span>
 								</span>
 								<span class="desc">
@@ -245,7 +245,7 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/illustration030.jpg" loading="lazy alt="Open Book" />
+										<img src="assets/images/illustration030.jpg" loading="lazy" alt="Open Book" />
 									</span>
 								</span>
 								<span class="desc">
@@ -294,7 +294,7 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/design039.jpg" loading="lazy alt="Website Visual" />
+										<img src="assets/images/design039.jpg" loading="lazy" alt="Website Visual" />
 									</span>
 								</span>
 								<span class="desc">
@@ -326,7 +326,7 @@
 							<a href="javascript:void(0)">
 								<span class="image">
 									<span class="img">
-										<img src="assets/images/design040.jpg" loading="lazy alt="Website Visual" />
+										<img src="assets/images/design040.jpg" loading="lazy" alt="Website Visual" />
 									</span>
 								</span>
 								<span class="desc">
@@ -677,21 +677,6 @@
 						</div>
 					</div>
 
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/design004.jpg" loading="lazy" alt="Hero:108" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Photo&#12539;Graphic Design</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Hero:108<span class="small">  水火:108模型攝影</span></span>
-								</span>
-							</a>
-						</div>
-					</div> -->
 
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
 						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
@@ -742,21 +727,6 @@
 						</div>
 					</div>
 
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/design012.jpg" loading="lazy" alt="Taiwan Comix 10" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Editorial Design</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Taiwan Comix 10<span class="small">  視覺提案</span></span>
-								</span>
-							</a>
-						</div>
-					</div> -->
 
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
 						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
@@ -789,22 +759,6 @@
 							</a>
 						</div>
 					</div>
-
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/photo027.jpg" loading="lazy" alt="Hokkaido" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Photo</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">Hokkaido<span class="small">  北海道</span></span>
-								</span>
-							</a>
-						</div>
-					</div> -->
 
 
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
@@ -1036,21 +990,6 @@
 						</div>
 					</div>
 
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/design018.jpg" loading="lazy" alt="FB Post" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration&#12539;Design</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">FB Post</span>
-								</span>
-							</a>
-						</div>
-					</div> -->
 
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
 						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
@@ -1068,22 +1007,6 @@
 						</div>
 					</div>
 
-
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/design020.jpg" loading="lazy" alt="FB Post" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration&#12539;Design</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">FB Post</span>
-								</span>
-							</a>
-						</div>
-					</div> -->
 
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
 						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
@@ -1117,21 +1040,6 @@
 						</div>
 					</div>
 
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/design023.jpg" loading="lazy" alt="FB Post" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Illustration&#12539;Design</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">FB Post</span>
-								</span>
-							</a>
-						</div>
-					</div> -->
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
 						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 							<a href="javascript:void(0)">
@@ -1788,23 +1696,6 @@
 						</div>
 					</div>
 
-					<!-- <div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6  ">
-						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
-							<a href="javascript:void(0)">
-								<span class="image">
-									<span class="img">
-										<img src="assets/images/design026.jpg" loading="lazy" alt="FB Post" />
-									</span>
-								</span>
-								<span class="desc">
-									<span class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">Design</span>
-									<span class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">FB Post</span>
-								</span>
-							</a>
-						</div>
-					</div> -->
-
-
 					<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
 						<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 							<a href="javascript:void(0)">
@@ -2096,22 +1987,12 @@
 							</a>
 						</div>
 					</div>
-
-	
-
-			
-
 				</div>
 
 			</div>
 		</div>
 
 	</div>
-	<!-- Back to top button -->
-	<!-- <button type="button"  id="btn-back-to-top">
-		<?xml version="1.0" encoding="UTF-8"?>
-		<svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.33 24"><defs><style>.cls-1{fill:#595959;}</style></defs><path class="cls-1" d="M5.33,10.67h4v13.33h2.67V10.67h4l-5.33-5.33-5.33,5.33ZM0,0V2.67H21.33V0H0Z"/></svg>
-	</button> -->
 	
 		<!-- Back to top button -->
 		<button type="button"  id="btn-back-to-top">
