404-back to relative path

--- a/404.html
+++ b/404.html
@@ -26,8 +26,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Playfair+Display&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- CSS STYLES -->
-  <!-- <link rel="stylesheet" href="assets/css/vendors/bootstrap.css" type="text/css" media="all" /> -->
-  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="assets/css/vendors/bootstrap.css" type="text/css" media="all" /> 
+  <!-- <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" type="text/css" media="all" /> -->
   <link rel="stylesheet" href="https://tsaichialin.com/assets/fonts/social/css/fontello.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://tsaichialin.com/assets/css/vendors/splitting.css" type="text/css" media="all" />
   <!-- <link rel="stylesheet" href="assets/css/vendors/swiper.css" type="text/css" media="all" /> -->
