--- a/404.html
+++ b/404.html
@@ -30,9 +30,9 @@
   <!-- <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" type="text/css" media="all" /> -->
   <link rel="stylesheet" href="https://tsaichialin.com/assets/fonts/social/css/fontello.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://tsaichialin.com/assets/css/vendors/splitting.css" type="text/css" media="all" />
-  <!-- <link rel="stylesheet" href="assets/css/vendors/swiper.css" type="text/css" media="all" /> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="https://tsaichialin.com/assets/css/main.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="assets/css/vendors/swiper.css" type="text/css" media="all" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.css" type="text/css" media="all" /> -->
+  <link rel="stylesheet" href="assets/css/main.css" type="text/css" media="all" />
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
