--- a/404.html
+++ b/404.html
@@ -28,8 +28,8 @@
   <!-- CSS STYLES -->
   <link rel="stylesheet" href="assets/css/vendors/bootstrap.css" type="text/css" media="all" /> 
   <!-- <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" type="text/css" media="all" /> -->
-  <link rel="stylesheet" href="https://tsaichialin.com/assets/fonts/social/css/fontello.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="https://tsaichialin.com/assets/css/vendors/splitting.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="assets/fonts/social/css/fontello.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="assets/css/vendors/splitting.css" type="text/css" media="all" />
   <link rel="stylesheet" href="assets/css/vendors/swiper.css" type="text/css" media="all" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.css" type="text/css" media="all" /> -->
   <link rel="stylesheet" href="assets/css/main.css" type="text/css" media="all" />
@@ -37,8 +37,8 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="https://tsaichialin.com/assets/images/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="https://tsaichialin.com/assets/images/icon.png">
+  <link rel="icon" href="assets/images/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="assets/images/icon.png">
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -97,12 +97,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.jss"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.3/swiper-bundle.min.js"></script>
-<script src="https://tsaichialin.com/assets/js/splitting.min.js"></script>
-<script src="https://tsaichialin.com/assets/js/jarallax.min.js"></script>
-<script src="https://tsaichialin.com/assets/js/imagesloaded.pkgd.js"></script>
-<script src="https://tsaichialin.com/assets/js/isotope.pkgd.js"></script>
-<script src="https://tsaichialin.com/assets/js/jquery.scrolla.js"></script>
-<script src="https://tsaichialin.com/assets/js/skrollr.js"></script>
-<script src="https://tsaichialin.com/assets/js/common.js"></script>
+<script src="assets/js/splitting.min.js"></script>
+<script src="assets/js/jarallax.min.js"></script>
+<script src="assets/js/imagesloaded.pkgd.js"></script>
+<script src="assets/js/isotope.pkgd.js"></script>
+<script src="assets/js/jquery.scrolla.js"></script>
+<script src="assets/js/skrollr.js"></script>
+<script src="assets/js/common.js"></script>
 </body>
 </html>
