--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1235,7 +1235,7 @@
   <!-- <script src="assets/js/swiper.js"></script> -->
   <script src="assets/js/splitting.js"></script>
   <script src="assets/js/jarallax.min.js"></script>
-  <!-- <script src="assets/js/magnific-popup.js"></script> -->
+  <script src="assets/js/magnific-popup.js"></script>
   <script src="assets/js/imagesloaded.pkgd.js"></script>
   <!-- <script src="assets/js/isotope.pkgd.js"></script> -->
   <script src="assets/js/jquery.scrolla.js"></script>
