--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,15 +38,22 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TFQ9QZ6');</script>
+  })(window,document,'script','dataLayer','GTM-TFQ9QZ6');
+  </script>
 
 </head>
 
 <body class="home page light-skin">
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFQ9QZ6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
 	<div class="container-page ">
 
     <!-- Preloader -->
