--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -177,7 +177,7 @@
               </div>
               <div class="description scrolla-element-anim-1 scroll-animate" data-animate="active">
                 <p>
-                  Graphic & Web Designer<br>Motion Graphics Animator<br>Illlustrator
+                  Graphic & Web Designer<br>Motion Graphics Animator<br>Illustrator
                 </p>
                 <div class="social-links">
                   <a href="https://www.instagram.com/nice.and.quiet/" target="_blank" rel="noreferrer">
@@ -638,11 +638,23 @@
 
               <!-- Description -->
               <div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-          			<p>A collection of my favorites projects, with a 2 minute showreel at the page bottom.</p>
+          			<p>A collection of my favorites projects, with a 2 minute showreel.</p>
           		</div>
 
             </div>
           </div>
+          
+           <!-- Video -->
+
+          <section class="section section-bg" >
+            <div class="container">
+            <div class="container"style="padding-bottom: 56.25%; max-width: 100%; position: relative;">
+              <iframe src="https://player.vimeo.com/video/751170770?autoplay=1&title=0&portrait=0&byline=0&loop=1" width="1140px" height="642px" 
+              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;" frameborder="0" loading="lazy">
+              </iframe>
+            </div>
+          </div>
+          </section>
 
           <!-- Works -->
           <div class="works-box">
@@ -1137,24 +1149,6 @@
         </div>
       </section>
 
-      <!-- Video -->
-      <!-- <section class="m-video-large">
-        <div class="video">
-          <div class="img js-parallax" style="background-image: url(assets/images/blog9.jpg);"></div>
-          <iframe class="js-video-iframe" data-src="https://www.youtube.com/embed/Gu6z6kIukgg?showinfo=0&rel=0&autoplay=1" loading="lazy"></iframe>
-          <div class="play"></div>
-        </div>
-      </section> -->
-
-      <section class="section-bg" >
-        <div class="container">
-        <div class="container"style="padding-bottom: 56.25%; max-width: 100%; position: relative;">
-          <iframe src="https://player.vimeo.com/video/751170770?autoplay=1&title=0&portrait=0&byline=0&loop=1" width="1140px" height="642px" 
-           style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;" frameborder="0" loading="lazy">
-          </iframe>
-        </div>
-      </div>
-      </section>
 
       <section class="section section-bg section-parallax-5" id="contact-section">
         <div class="container">
