--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@
 							  <!-- menu full -->
 							  <div class="menu-full">
 								  <ul class="menu-full">
-										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="index.html">Welcome</a></li>
+										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="index.html">Home</a></li>
 										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="about.html">Who is this</a></li>
-										  <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="works.html">Works collection</a></li>
+										  <!-- <li class="menu-item"><a class="splitting-text-anim-1" data-splitting="chars" href="portfolio/index.html">Portfolio 2022</a></li> -->
 								  </ul>
 							  </div>
 						  </div>
